--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,10 @@ body {
   flex: 1;
   min-height: 100%;
 }
+img {
+  width: 100%;
+  height: auto;
+}
 .wrapper {
   position: relative;
   display: flex;
