Update Mobile View

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -12,7 +12,7 @@ header.headerBarContainer {
     .headerLeft {
       display: flex;
       align-items: center;
-      flex: 1;
+      flex: auto;
       font-size: 24px;
       font-weight: 500;
     }
